--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chunkviz",
-  "version": "0.1.0",
+  "name": "text-chunk-visualizer",
+  "version": "0.1.1",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -11,7 +11,7 @@
     "pdfjs-dist": "^4.0.269",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "serve": "^14.2.1",
     "web-vitals": "^2.1.4"
   },
