--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "text-chunk-visualizer",
   "version": "0.1.1",
   "dependencies": {
+    "@google-cloud/functions-framework": "^3.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
